<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">


    <Switch
        android:id="@+id/switchUseClientCertificate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/useClientCertificate" />

    <Switch
        android:id="@+id/switchAcceptAllCertificate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/switchUseClientCertificate"
        android:layout_marginTop="30dp"
        android:text="@string/acceptAllCertificate" />

    <RelativeLayout
        android:id="@+id/radioGroupContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switchAcceptAllCertificate"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/trustManagerLoadAs"
            android:textColor="@android:color/black"
            android:textOff="@string/crt"
            android:textOn="@string/p12" />

        <RadioGroup
            android:id="@+id/radioGroupTrustManagerLoadAs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonP12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/p12" />

            <RadioButton
                android:id="@+id/radioButtonCrt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crt" />
        </RadioGroup>
    </RelativeLayout>

    <Button
        android:id="@+id/buttonCallService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroupContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/callService"
        android:textAllCaps="false" />


    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonCallService"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/serviceResult" />


</RelativeLayout>